# e-Heart.py

./: README.md  pyproject.toml
docs/source/: api.rst  conf.py  example.rst  index.rst  protobuf.md  server.rst
proto/eheart/server/: eheart.proto
proto/eheart/server/proto/: request.proto  response.proto  util.proto
proto/gen-doc/: myst.tmpl
src/eheart/: __init__.py  _engine.py  _model.py
src/eheart/server/: __init__.py  __main__.py  _logger.py  _run.py  _session.py  eheart_pb2.py
src/eheart/server/proto/: request_pb2.py  response_pb2.py  util_pb2.py
tests/: test_engine.py  test_server.py
