[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "e-heart"
authors = [
  { name="SHIMAYOSHI, Takao", email="simayosi@systemiz.jp" },
]
description = "e-Heart Python Framework"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "cython",
    "numpy",
    "scipy",
    "websockets",
    "protobuf ~= 4.21",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "eheart.__version__"}
